--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,8 @@
     <string name="btn_logout">LOGOUT</string>
     <string name="name">Fullname</string>
 
-
-
+    <string-array name="tables">
+        <item
+    </string-array>
 
 </resources>
